	 . Removing duplicated locking support (Redmine#3838).
	 . Documenting rotation parameters at example.rsync (Redmine#3891).
	 . Ensure that a non-zero rsync exit status is caught (Redmine#3892).
    build system changes
	 . Workaround automake sanity check that would prevent us from
	   installing lib/* into lib/backupninja/. Where else are be supposed
	   to install such files anyway?
    documentation changes
	 . Document what features available to .sh jobs (Redmine #1558).

version 0.9.10 -- September 23, 2011
    backupninja changes
	 . Fix email reports, that were broken by the new locking support.
    handler changes
	dup:
	 . Cleanup: stop supporting duplicity < 0.6.01 (Redmine#2538).
	 . Fix incorrect duplicity version check for keepincroffulls.
	   Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes Redmine bug #3443)
	   (Closes: #641120)
	ldap:
	 . Don't install LDAP handler, helper and example configuration file.
	   Don't mention LDAP support in documentation.
	   Official LDAP support will come back once this code has found
	   itself a maintainer. Interested? Get in touch!
	rsync:
	 . Fixing $rsync_options output when rsync is local
	   (Closes Redmine bug #3001)
	   (Closes: #639545)
	sh:
	 . Allow 'when = XXX' with spaces (Redmine#2769).
	   Thanks to aihtdikh for the patch.
	sys:
	 . Remove useless and inconsistent executable bit on handler.
    helper changes
	rdiff:
	 . Fix infinite loop when version inconsistency is detected.
	   Thanks to Chris Lamb <lamby@debian.org> for the patch.
	   (Closes: #639547)
version 0.9.9 -- May 15, 2011
    backupninja changes
	 . Use locking to avoid running concurrent instances of the same backup
	   action. Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes: #511300)
    handler changes
	all handlers:
	 . Stop using "local VAR" outside functions. (Closes: #530647)
	dup:
	 . Use --tempdir option rather than TMPDIR environment variable.
	   (Closes Roundup bug #598)